@@ -1,3 +1,4 @@
+- MANTA-285 add option to keep all temp files to support workflow debug
 - MANTA-276 mv configure to top-level, mv guides to docs dir, add methods docs
 - MANTA-284 improve windows shell support by shortening very long cmdlines
 v0.29.3
